<resources>
    <string name="app_name">TriviaApp</string>
    <string name="name">Name</string>
    <string name="third_wrong_answer">third wrong answer</string>
    <string name="second_wrong_answer">second wrong answer</string>
    <string name="correct_answer">correct answer</string>
    <string name="first_wrong_answer">first wrong answer</string>
    <string name="save_question">save question</string>
    <string name="name_of_question">name of question</string>
    <string name="add_question">Add Question</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="delete_quiz">Delete Quiz</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="submit">Submit</string>
    <string name="wrong_answer_text">Wrong. The correct answer is %1$s!</string>
    <string name="number_of_correct_answers">You answered %1$d questions correctly</string>
</resources>
